[workspace]

[package]
authors = ["Paul Collier <paul@paulcollier.ca>"]
name = "exude"
publish = false
version = "0.1.0"

[profile.dev]
opt-level = 1 # faster hashing

[dependencies]
client = { path = "client" }
driver = { path = "driver" }
g = { path = "g" }
issuer = { path = "issuer" }
server = { path = "server" }
