[package]
authors = ["Paul Collier <paul@paulcollier.ca>"]
name = "exude"
publish = false
version = "0.1.0"

[dependencies.client]
path = "client"

[dependencies.driver]
path = "driver"

[dependencies.g]
path = "g"

[dependencies.issuer]
path = "issuer"

[dependencies.oneshot]
path = "oneshot"

[dependencies.proto]
path = "proto"

[dependencies.server]
path = "server"

[profile]

[profile.dev]
opt-level = 1

[workspace]
