[package]
authors = ["Paul Collier <paul@paulcollier.ca>"]
name = "exude"
publish = false
version = "0.1.0"

[dependencies]
error-chain = "0.10.0"
serde = "1.0.7"
serde_derive = "1.0.7"
serde_json = "1.0.2"
terminal_size = "0.1.6"

[dependencies.issuer]
path = "issuer"

[profile]

[profile.dev]
opt-level = 1
