[package]
authors = ["Paul Collier <paul@paulcollier.ca>"]
name = "client"
publish = false
version = "0.1.0"

[[bin]]
doc = false
name = "client"

[dependencies]
digest = "0.5"
futures = "0.1"
futures-cpupool = "0.1"
libc = "0.2"
libloading = "0.3.2"
rental = "0.4.8"
sha3 = "0.5"
sodiumoxide = "0.0.14"
tokio-core = "0.1"
tokio-io = "0.1"

[dependencies.g]
optional = true
path = "../g"

[dependencies.proto]
path = "../proto"

[features]
static_gl = ["g", "g/gl"]
static_metal = ["g", "g/metal"]
