[package]
authors = ["Paul Collier <paul@paulcollier.ca>"]
name = "client"
publish = false
version = "0.1.0"

[[bin]]
doc = false
name = "client"

[dependencies]
digest = "0.6"
error-chain = "0.10.0"
futures = "0.1"
futures-cpupool = "0.1"
hyper = "0.11.1"
libloading = "0.4.0"
rental = "0.4.8"
sha3 = "0.6"
sodiumoxide = "0.0.15"
tokio-core = "0.1"
tokio-io = "0.1"

[dependencies.g]
optional = true
path = "../g"

[dependencies.proto]
path = "../proto"

[features]
static_gl = ["g", "g/gl"]
static_metal = ["g", "g/metal"]
