[package]
authors = ["Paul Collier <paul@paulcollier.ca>"]
name = "driver"
version = "0.1.0"

[dependencies]
error-chain = "0.10.0"

[dependencies.g]
optional = true
path = "../g"

[dependencies.proto]
path = "../proto"

[features]
static_gl = ["g", "g/gl"]
static_metal = ["g", "g/metal"]

[lib]
crate-type = ["dylib"]
name = "driver"
