[package]
authors = ["Paul Collier <paul@paulcollier.ca>"]
name = "g"
version = "0.1.0"

[dependencies]
gfx = "0.15.1"
gfx_text = "0.16.0"

[dependencies.gfx_device_gl]
optional = true
version = "0.14.0"

[dependencies.gfx_device_metal]
optional = true
version = "0.2.0"

[dependencies.gfx_window_glutin]
optional = true
version = "0.15"

[dependencies.gfx_window_metal]
optional = true
version = "0.2.0"

[dependencies.glutin]
optional = true
version = "0.7.4"

[dependencies.winit]
optional = true
version = "0.5.11"

[features]
gl = ["gfx_device_gl", "gfx_window_glutin", "glutin"]
metal = ["gfx_device_metal", "gfx_window_metal", "winit"]

[lib]
crate-type = ["dylib"]
name = "g"
