[package]
authors = ["Paul Collier <paul@paulcollier.ca>"]
name = "g"
version = "0.1.0"

[dependencies.gfx_text]
git = "https://github.com/pshc/gfx_text"
rev = "c7e369d"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx"
rev = "d2425de"

[dependencies.gfx_device_gl]
git = "https://github.com/gfx-rs/gfx"
optional = true
rev = "d2425de"

[dependencies.gfx_device_metal]
optional = true
version = "0.2.0"

[dependencies.gfx_window_glutin]
git = "https://github.com/gfx-rs/gfx"
optional = true
rev = "d2425de"

[dependencies.gfx_window_metal]
optional = true
version = "0.2.0"

[dependencies.glutin]
optional = true
version = "0.9.1"

[dependencies.winit]
optional = true
version = "0.6.0"

[features]
gl = ["gfx_device_gl", "gfx_window_glutin", "glutin"]
headless = ["gfx_window_glutin/headless"]
metal = ["gfx_device_metal", "gfx_window_metal", "winit"]

[lib]
crate-type = ["dylib"]
name = "g"
