[package]
authors = ["Paul Collier <paul@paulcollier.ca>"]
name = "oneshot"
publish = false
version = "0.1.0"

[dependencies]
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"

[dependencies.client]
path = "../client"

[dependencies.driver]
path = "../driver"

[dependencies.g]
path = "../g"

[dependencies.proto]
path = "../proto"

[features]
default = ["client/static_gl", "driver/static_gl", "g/gl"]
metal = ["client/static_metal", "driver/static_metal", "g/metal"]
